Added game board categories
Created 5 game categories box's for the top of the game board. Also made a game board container to flex the boxes, so they align with the original 5x5 game board

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
         <h1 id="playtext">Hoodpardy</h1>
          <button id="restartBtn">Restart</button>
 
-       <div id="gameboard">
+       <div id="gameboardC">
+    <div class="category" id="0">TV/Movies</div>
+    <div class="category" id="1">Music</div>
+    <div class="category" id="2">Sports</div>
+    <div class="category" id="3">Foods/Drinks</div>
+    <div class="category" id="4">Miscellaneous</div>
+    </div>
+        <div id="gameboard">
     <div class="box" id="0">100</div>
     <div class="box" id="1">100</div>
     <div class="box" id="2">100</div>
